force-app/main/default/objects/Contest_Award__c/Contest_Award__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Contest_Award_Compact_Layout</compactLayoutAssignment>
    <description>This is an award for an event contest</description>
    <label>Contest Award</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Contest Award No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contest Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>