force-app/main/default/objects/Contest_Award__c/fields/Award_Title__c.field-meta.xml
<CustomField>
    <fullName>Award_Title__c</fullName>
    <description>The title (description) of the award</description>
    <inlineHelpText>The title (description) of the award</inlineHelpText>
    <label>Award Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>