force-app/main/default/objects/Contest_Award__c/fields/Contest__c.field-meta.xml
<CustomField>
    <fullName>Contest__c</fullName>
    <defaultValue>&quot;vcard&quot;</defaultValue>
    <description>Which contest does this award belong to?</description>
    <inlineHelpText>Which contest does this award belong to?</inlineHelpText>
    <label>Contest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vcard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>