force-app/main/default/objects/Contest_Award__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description
  >A description of the contest award displayed below the title in the vDGS hub</description>
    <inlineHelpText
  >A description of the contest award displayed below the title in the vDGS hub</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>