force-app/main/default/objects/Contest_Award__c/fields/Event_and_Award_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_and_Award_Title__c</fullName>
    <formula
  >Event_or_Conference__r.Name  &amp;&quot; | &quot;&amp; Award_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event and Award Title</label>
    <type>Text</type>
</CustomField>