force-app/main/default/objects/Contest_Award__c/fields/Event_or_Conference__c.field-meta.xml
<CustomField>
    <fullName>Event_or_Conference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The event this reward belongs to.</description>
    <inlineHelpText>The event this reward belongs to.</inlineHelpText>
    <label>Event or Conference</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Contest Awards</relationshipLabel>
    <relationshipName>Contest_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>