force-app/main/default/objects/Contest_Award__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Award_Title__c</columns>
    <columns>Event_or_Conference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>